--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
+    "next-images": "^1.8.4",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "18.0.0",
